@@ -3,17 +3,32 @@ class Report
     class Rows
       attr_reader :body
       attr_accessor :method_id
-      attr_accessor :args
+      attr_accessor :method_args
       def initialize(*args)
         @body = args.shift
         @method_id = args.shift
         if args.last.is_a?(Array)
-          @args = args.last
+          @method_args = args.last
         end
       end
-      def each(report, &blk)
-        (args ? report.send(method_id, *args) : report.send(method_id)).each do |obj|
-          blk.call obj
+      # TODO simplify this... am I missing something obvious?
+      def each(report)
+        block_taken = false
+        if method_args
+          enum = report.send(method_id, *method_args) do |obj|
+            block_taken = true
+            yield obj
+          end
+        else
+          enum = report.send(method_id) do |obj|
+            block_taken = true
+            yield obj
+          end
+        end
+        unless block_taken
+          enum.each do |obj|
+            yield obj
+          end
         end
       end
     end
